--- a/app/project.twig
+++ b/app/project.twig
@@ -147,7 +147,7 @@
 		</div>
 		
 		<h3 class="block-title" id="overview">Overview</h3>
-		<ul class="thumb-service thumb--4">
+		<ul class="thumb-service thumb--4" data-module="ThumbService">
 			<li>
 				<i class="fa fa-home"></i>
 				<div class="info-fa">
@@ -184,8 +184,8 @@
 					</p>
 				</div>
 			</li>
-
-			<li>
+			<li class="show-for-small"><a href="javascript:void" class="view-more">View +<span>15</span>more</a></li>
+			<li class="hide-for-small">
 				<i class="fa fa-home"></i>
 				<div class="info-fa">
 					<p>
@@ -194,7 +194,7 @@
 					</p>
 				</div>
 			</li>
-			<li>
+			<li class="hide-for-small">
 				<i class="fa fa-truck"></i>
 				<div class="info-fa">
 					<p>
@@ -203,7 +203,7 @@
 					</p>
 				</div>
 			</li>
-			<li>
+			<li class="hide-for-small">
 				<i class="fa fa-building"></i>
 				<div class="info-fa">
 					<p>
@@ -212,7 +212,7 @@
 					</p>
 				</div>
 			</li>
-			<li>
+			<li class="hide-for-small">
 				<i class="fa fa-bed"></i>
 				<div class="info-fa">
 					<p>
@@ -230,22 +230,23 @@
 			<li><i class="flaticon-a-badminton9"></i><span>badminton court</span></li>
 			<li><i class="flaticon-a-phonecall10"></i><span>Intercom</span></li>
 			<li><i class="flaticon-a-bicycle14"></i><span>Gymnasium</span></li>
-			<li><i class="flaticon-a-tea24"></i><span>Coffee shop</span></li>
-			<li><i class="flaticon-a-money385"></i><span>Access card</span></li>
-			<li><i class="flaticon-a-shopper1"></i><span>Shooping mall</span></li>
-			<li><i class="flaticon-a-yoga13"></i><span>Yoga &amp; meditation</span></li>
-			<li><i class="flaticon-a-customerservice14"></i><span>Maintance staff</span></li>
-			<li><i class="flaticon-a-shopping-cart8"></i><span>supper market</span></li>
-			<li><i class="flaticon-a-swimming21"></i><span>Swimming Pool</span></li>
-			<li><i class="flaticon-a-policeman1"></i><span>Security Guards</span></li>
-			<li><i class="flaticon-a-pool8"></i><span>Indoor game</span></li>
-			<li><i class="flaticon-a-medical12"></i><span>Phamacy</span></li>
-			<li><i class="flaticon-a-man244"></i><span>Banking /ATM</span></li>
-			<li><i class="flaticon-a-racket1"></i><span>tennis court</span></li>
-			<li><i class="flaticon-a-covered16"></i><span>Restaurant</span></li>            
-			<li><i class="flaticon-a-network11"></i><span>Club house</span></li>
-			<li><i class="flaticon-a-plug38"></i><span>24h Electricity Backup</span></li>
-			<li><i class="flaticon-a-parking19"></i><span>Parking</span></li>
+			<li class="show-for-small"><a href="javascript:void" class="view-more">View +<span>15</span>more</a></li>
+			<li class="hide-for-small"><i class="flaticon-a-tea24"></i><span>Coffee shop</span></li>
+			<li class="hide-for-small"><i class="flaticon-a-money385"></i><span>Access card</span></li>
+			<li class="hide-for-small"><i class="flaticon-a-shopper1"></i><span>Shooping mall</span></li>
+			<li class="hide-for-small"><i class="flaticon-a-yoga13"></i><span>Yoga &amp; meditation</span></li>
+			<li class="hide-for-small"><i class="flaticon-a-customerservice14"></i><span>Maintance staff</span></li>
+			<li class="hide-for-small"><i class="flaticon-a-shopping-cart8"></i><span>supper market</span></li>
+			<li class="hide-for-small"><i class="flaticon-a-swimming21"></i><span>Swimming Pool</span></li>
+			<li class="hide-for-small"><i class="flaticon-a-policeman1"></i><span>Security Guards</span></li>
+			<li class="hide-for-small"><i class="flaticon-a-pool8"></i><span>Indoor game</span></li>
+			<li class="hide-for-small"><i class="flaticon-a-medical12"></i><span>Phamacy</span></li>
+			<li class="hide-for-small"><i class="flaticon-a-man244"></i><span>Banking /ATM</span></li>
+			<li class="hide-for-small"><i class="flaticon-a-racket1"></i><span>tennis court</span></li>
+			<li class="hide-for-small"><i class="flaticon-a-covered16"></i><span>Restaurant</span></li>            
+			<li class="hide-for-small"><i class="flaticon-a-network11"></i><span>Club house</span></li>
+			<li class="hide-for-small"><i class="flaticon-a-plug38"></i><span>24h Electricity Backup</span></li>
+			<li class="hide-for-small"><i class="flaticon-a-parking19"></i><span>Parking</span></li>
 		</ul>
 
 	</div>
@@ -323,52 +324,52 @@
 		<h2 class="section-title">Similar Projects</h2>
 		<div class="slider-wrapper">
 			<div class="item-project">
-					<figure class="item-project__img"><img src="assets/images/dummy/masteri-anphu.png"></figure>
-					<div class="item-project__info">
-						<h3>Mastery An Phu</h3>
-						<p class="info-detail">DISTRICT2 - 43Floor - 900 unit</p>
-						<p class="info-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim ven</p>
-						<div class="btn-wrapper">
-							<a class="btn btn--small" href="#"><i class="fa fa-long-arrow-right"></i> Read more</a>
-							<a class="btn  btn--small" href="#"><i class="fa fa-building-o"></i> see list</a>
-						</div>
-					</div>				
+				<figure class="item-project__img"><img src="assets/images/dummy/masteri-anphu.png"></figure>
+				<div class="item-project__info">
+					<h3>Mastery An Phu</h3>
+					<p class="info-detail">DISTRICT2 - 43Floor - 900 unit</p>
+					<p class="info-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim ven</p>
+					<div class="btn-wrapper">
+						<a class="btn btn--small" href="#"><i class="fa fa-long-arrow-right"></i> Read more</a>
+						<a class="btn  btn--small" href="#"><i class="fa fa-building-o"></i> see list</a>
+					</div>
+				</div>				
 			</div>
 			<div class="item-project">
-					<figure class="item-project__img"><img src="assets/images/dummy/masteri-anphu.png"></figure>
-					<div class="item-project__info">
-						<h3>Mastery An Phu</h3>
-						<p class="info-detail">DISTRICT2 - 43Floor - 900 unit</p>
-						<p class="info-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim ven</p>
-						<div class="btn-wrapper">
-							<a class="btn btn--small" href="#"><i class="fa fa-long-arrow-right"></i> Read more</a>
-							<a class="btn  btn--small" href="#"><i class="fa fa-building-o"></i> see list</a>
-						</div>
-					</div>				
+				<figure class="item-project__img"><img src="assets/images/dummy/masteri-anphu.png"></figure>
+				<div class="item-project__info">
+					<h3>Mastery An Phu</h3>
+					<p class="info-detail">DISTRICT2 - 43Floor - 900 unit</p>
+					<p class="info-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim ven</p>
+					<div class="btn-wrapper">
+						<a class="btn btn--small" href="#"><i class="fa fa-long-arrow-right"></i> Read more</a>
+						<a class="btn  btn--small" href="#"><i class="fa fa-building-o"></i> see list</a>
+					</div>
+				</div>				
 			</div>
 			<div class="item-project">
-					<figure class="item-project__img"><img src="assets/images/dummy/masteri-anphu.png"></figure>
-					<div class="item-project__info">
-						<h3>Mastery An Phu</h3>
-						<p class="info-detail">DISTRICT2 - 43Floor - 900 unit</p>
-						<p class="info-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim ven</p>
-						<div class="btn-wrapper">
-							<a class="btn btn--small" href="#"><i class="fa fa-long-arrow-right"></i> Read more</a>
-							<a class="btn  btn--small" href="#"><i class="fa fa-building-o"></i> see list</a>
-						</div>
-					</div>				
+				<figure class="item-project__img"><img src="assets/images/dummy/masteri-anphu.png"></figure>
+				<div class="item-project__info">
+					<h3>Mastery An Phu</h3>
+					<p class="info-detail">DISTRICT2 - 43Floor - 900 unit</p>
+					<p class="info-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim ven</p>
+					<div class="btn-wrapper">
+						<a class="btn btn--small" href="#"><i class="fa fa-long-arrow-right"></i> Read more</a>
+						<a class="btn  btn--small" href="#"><i class="fa fa-building-o"></i> see list</a>
+					</div>
+				</div>				
 			</div>
 			<div class="item-project">
-					<figure class="item-project__img"><img src="assets/images/dummy/masteri-anphu.png"></figure>
-					<div class="item-project__info">
-						<h3>Mastery An Phu</h3>
-						<p class="info-detail">DISTRICT2 - 43Floor - 900 unit</p>
-						<p class="info-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim ven</p>
-						<div class="btn-wrapper">
-							<a class="btn btn--small" href="#"><i class="fa fa-long-arrow-right"></i> Read more</a>
-							<a class="btn  btn--small" href="#"><i class="fa fa-building-o"></i> see list</a>
-						</div>
-					</div>				
+				<figure class="item-project__img"><img src="assets/images/dummy/masteri-anphu.png"></figure>
+				<div class="item-project__info">
+					<h3>Mastery An Phu</h3>
+					<p class="info-detail">DISTRICT2 - 43Floor - 900 unit</p>
+					<p class="info-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim ven</p>
+					<div class="btn-wrapper">
+						<a class="btn btn--small" href="#"><i class="fa fa-long-arrow-right"></i> Read more</a>
+						<a class="btn  btn--small" href="#"><i class="fa fa-building-o"></i> see list</a>
+					</div>
+				</div>				
 			</div>
 		</div>
 
