--- a/app/search-page.twig
+++ b/app/search-page.twig
@@ -3,7 +3,7 @@
 {% block page %}
 <section class="search-content" data-module="SearchControl">
 
-  <div class="search-control">
+  <div class="search-control hide-for-small">
     <div class="checkbox-list select--big">
       <span>Service Apartment</span> 
       <ul>
@@ -122,7 +122,7 @@
       </ul>
     </div>
 
-    <a href="#collapseFilter" data-toggle="collapse" class="btn float-right" id="advance-filter" ><span class="notificate bg--red">1</span> More filter <i class="fa fa-angle-down"></i></a>
+    <a href="#collapseFilter" data-toggle="collapse" class="btn float-right" id="advance-filter" ><span class="notificate bg--red">0</span> More filter <i class="fa fa-angle-down"></i></a>
 
   </div>
 
@@ -172,158 +172,158 @@
           </div>
 
           <h3 class="block-title">Required Amenities</h3>
-          <div class="row">
-            <div class="col-3">
+          <ul class="list-check">
+            <li>
               <div class="checkbox-wrapper check-switch">
                 <input type="checkbox" id="tv" name="tv">
                 <label for="tv">TV</label>
               </div>
-            </div>
-            <div class="col-3">
+            </li>
+            <li>
               <div class="checkbox-wrapper check-switch">
                 <input type="checkbox" id="microwave" name="microwave">
                 <label for="microwave">Microwave</label>
               </div>
-            </div>
-            <div class="col-3">
+            </li>
+            <li>
               <div class="checkbox-wrapper check-switch">
                 <input type="checkbox" id="aircondition" name="aircondition">
                 <label for="aircondition">Air contitioner</label>
               </div>
-            </div>
-            <div class="col-3">
+            </li>
+            <li>
               <div class="checkbox-wrapper check-switch">
                 <input type="checkbox" id="chimney" name="chimney">
                 <label for="chimney">Electric chimney</label>
               </div>
-            </div>
-            <div class="col-3">
+            </li>
+            <li>
               <div class="checkbox-wrapper check-switch">
                 <input type="checkbox" id="smock-detector" name="smock-detector">
                 <label for="smock-detector">Smoke detector</label>
               </div>
-            </div>
-            <div class="col-3">
+            </li>
+            <li>
               <div class="checkbox-wrapper check-switch">
                 <input type="checkbox" id="fire-extinguisher" name="fire-extinguisher">
                 <label for="fire-extinguisher">Fire extinguisher</label>
               </div>
-            </div>
-            <div class="col-3">
+            </li>
+            <li>
               <div class="checkbox-wrapper check-switch">
                 <input type="checkbox" id="balcony" name="balcony">
                 <label for="balcony">Balcony</label>
               </div>
-            </div>
-            <div class="col-3">
+            </li>
+            <li>
               <div class="checkbox-wrapper check-switch">
                 <input type="checkbox" id="first-aid-kit" name="first-aid-kit">
                 <label for="first-aid-kit">First Aid Kit</label>
               </div>
-            </div>
-            <div class="col-3">
+            </li>
+            <li>
               <div class="checkbox-wrapper check-switch">
                 <input type="checkbox" id="bathtub" name="bathtub">
                 <label for="bathtub">Bathtub</label>
               </div>
-            </div>
-            <div class="col-3">
+            </li>
+            <li>
               <div class="checkbox-wrapper check-switch">
                 <input type="checkbox" id="geyser" name="geyser">
                 <label for="geyser">Geyser</label>
               </div>
-            </div>
-            <div class="col-3">
+            </li>
+            <li>
               <div class="checkbox-wrapper check-switch">
                 <input type="checkbox" id="essentails" name="essentails">
                 <label for="essentails">Essentails</label>
               </div>
-            </div>
-            <div class="col-3">
+            </li>
+            <li>
               <div class="checkbox-wrapper check-switch">
                 <input type="checkbox" id="dish-washer" name="dish-washer">
                 <label for="dish-washer">Dish washer</label>
               </div>
-            </div>
-          </div>
+            </li>
+          </ul>
           <a href="#" class="more"> More amenties</a>
           <br />
           <h3 class="block-title">Required Facilities</h3>
-          <div class="row">
-            <div class="col-3">
+          <ul class="list-check">
+
+            <li>
               <div class="checkbox-wrapper check-switch">
                 <input type="checkbox" id="e-backup" name="e-backup">
                 <label for="e-backup">24Hr Electricity Backup</label>
               </div>
-            </div>
-            <div class="col-3">
+            </li>
+            <li>
               <div class="checkbox-wrapper check-switch">
                 <input type="checkbox" id="parking" name="parking">
                 <label for="parking">Parking</label>
               </div>
-            </div>
-            <div class="col-3">
+            </li>
+            <li>
               <div class="checkbox-wrapper check-switch">
                 <input type="checkbox" id="community-hall" name="community-hall">
                 <label for="community-hall">Community Hall</label>
               </div>
-            </div>
-            <div class="col-3">
+            </li>
+            <li>
               <div class="checkbox-wrapper check-switch">
                 <input type="checkbox" id="club" name="club">
                 <label for="club">Club House</label>
               </div>
-            </div>
-            <div class="col-3">
+            </li>
+            <li>
               <div class="checkbox-wrapper check-switch">
                 <input type="checkbox" id="restaurant" name="restaurant">
                 <label for="restaurant">Restaurant</label>
               </div>
-            </div>
-            <div class="col-3">
+            </li>
+            <li>
               <div class="checkbox-wrapper check-switch">
                 <input type="checkbox" id="coffee-shop" name="coffee-shop">
                 <label for="coffee-shop">Coffee-shop</label>
               </div>
-            </div>
-            <div class="col-3">
+            </li>
+            <li>
               <div class="checkbox-wrapper check-switch">
                 <input type="checkbox" id="banking-atm" name="banking-atm">
                 <label for="banking-atm">Banking/ ATM</label>
               </div>
-            </div>
-            <div class="col-3">
+            </li>
+            <li>
               <div class="checkbox-wrapper check-switch">
                 <input type="checkbox" id="phamacy" name="phamacy">
                 <label for="phamacy">Phamacy</label>
               </div>
-            </div>
-            <div class="col-3">
+            </li>
+            <li>
               <div class="checkbox-wrapper check-switch">
                 <input type="checkbox" id="shopping-mall" name="shopping-mall">
                 <label for="shopping-mall">Shopping mall</label>
               </div>
-            </div>
-            <div class="col-3">
+            </li>
+            <li>
               <div class="checkbox-wrapper check-switch">
                 <input type="checkbox" id="supermarket" name="supermarket">
                 <label for="supermarket">Supermarket</label>
               </div>
-            </div>
-            <div class="col-3">
+            </li>
+            <li>
               <div class="checkbox-wrapper check-switch">
                 <input type="checkbox" id="swimming-pool" name="swimming-pool">
                 <label for="swimming-pool">Swimming Pool</label>
               </div>
-            </div>
-            <div class="col-3">
+            </li>
+            <li>
               <div class="checkbox-wrapper check-switch">
                 <input type="checkbox" id="gymnasiums" name="gymnasiums">
                 <label for="gymnasiums">Gymnasiums</label>
               </div>
-            </div>
-
-          </div>
+            </li>
+          </ul>
           <a href="#" class="more"> More amenties</a>
 
           <div class="btn-wrapper text-left">
@@ -351,9 +351,9 @@
 
         <label>Layout</label> 
         <ul class="search__layout" data-module="SwitchTab">
-          <li><a href="javascript:void(0);" class="active" data-toggle="tooltip" data-placement="top" data-layout="grid" title="Grid"><i class="fa fa-th-large"></i></a></li>
+          <li><a href="javascript:void(0);" class="active" data-toggle="tooltip" data-placement="top" data-layout="mapview"  title="Map"><i class="fa fa-map"></i></a></li>
+          <li><a href="javascript:void(0);" data-toggle="tooltip" data-placement="top" data-layout="grid" title="Grid"><i class="fa fa-th-large"></i></a></li>
           <li><a href="javascript:void(0);" data-toggle="tooltip" data-placement="top" data-layout="listview"  title="List"><i class="fa fa-bars"></i></a></li>
-          <li><a href="javascript:void(0);" data-toggle="tooltip" data-placement="top" data-layout="mapview"  title="Map"><i class="fa fa-map"></i></a></li>
           <li><a href="javascript:void(0);" data-toggle="tooltip" data-placement="top" data-layout="project"  title="Project"><i class="fa fa-bank"></i></a></li>
         </ul>
 
@@ -363,8 +363,6 @@
 
         <div class="jplist-drop-down" data-control-type="items-per-page-drop-down" data-control-name="paging" data-control-action="paging" data-control-animate-to-top="true">
           <ul>
-            <li><span data-number="2"> 2 per page </span></li>
-            <li><span data-number="4"> 4 per page </span></li>
             <li><span data-number="5" data-default="true"> 5 per page </span></li>
             <li><span data-number="6"> 6 per page </span></li>
             <li><span data-number="all"> View All </span></li>
