--- a/app/assets/css/pages/_home.scss
+++ b/app/assets/css/pages/_home.scss
@@ -32,7 +32,9 @@
 		@include absolute( top 50% left 50%);
 		transform:translate(-50%, -50%);
 	}
-
+	[class*='col-'] {
+		padding: 0 10px;
+	}
 
 	.link-arrow {
 		color: $red;
@@ -460,9 +462,10 @@
 		z-index: 3;
 		background: #fff;
 		width: 100%;
-		text-align: left !important;
+		text-align: left;
 		@include absolute(top 110% left);
 		@include screen(medium){
+			text-align: center;
 			position: static;
 			display: block !important;
 		}
@@ -473,7 +476,6 @@
 		}
 	}
 	li {
-		margin:  0 10px;
 		display: inline-block;
 		vertical-align: top;
 		@include screen(medium, false){
@@ -483,8 +485,10 @@
 	a {
 		display: block;
 		color: $color-light;
-		padding: 3px 10px;
 		font-weight: bold;
+		@include screen(medium){
+			padding: 3px 10px;
+		}
 	}
 	.active {
 		@include screen(medium){
@@ -576,7 +580,7 @@
 }
 
 
-.thumb--col-2 {
+.thumb--2 {
 	li {
 		width: 50%;
 		float: left;
@@ -659,10 +663,11 @@
 		border-radius: 50%;
 		width: 40px;
 		height: 40px;
-		opacity: 0;
 		background: #fff;
+		top: 40%;
 		box-shadow: 0 2px 10px #000;
 		@include screen(medium){
+			opacity: 0;
 			width: 50px;
 			height: 50px;
 		}
@@ -671,14 +676,16 @@
 		}
 	}
 	.slick-prev {
-		left: -5px;
+		left: -12px;
 	}
 	.slick-next {
-		right: -5px;
+		right: -12px;
 	}
 	&:hover {
 		.slick-arrow {
-			opacity: 1;
+			@include screen(medium){
+				opacity: 1;
+			}
 		}
 	}
 }
