--- a/app/assets/css/pages/_listing.scss
+++ b/app/assets/css/pages/_listing.scss
@@ -126,6 +126,19 @@
 	}
 }
 
+.banner__button {
+	@include absolute(bottom 10px right 10px);
+	.btn {
+		margin-left: 10px;
+		background: #fff;
+    font-size: 12px;
+    padding: 0 10px;
+    height: 30px;
+    line-height: 30px;
+    min-width: 100px;
+	}
+}
+
 .banner__info {
 	@include absolute(bottom left);
 	width: 100%;
@@ -230,7 +243,8 @@
 	.btn {
 		@include screen(medium, false){
 			line-height: 30px;
-			font-size: 12px;
+			font-size: 10px;
+			padding: 0 10px;
 			text-align: center;
 			height: 30px;
 
@@ -239,6 +253,11 @@
 
 	.inspect__info {
 		margin-top: 20px;
+		.btn {
+			@include screen(medium, false){
+				width: 100%;
+			}
+		}
 	}
 
 
@@ -273,4 +292,14 @@
 		height: 100%;
 		width: auto;
 	}
+}
+
+.thumb-service {
+	.show-for-small {
+		width: 100%;
+	}
+}
+.view-more {
+	color: $blue;
+	border-bottom: 1px solid;
 }
