--- a/app/index.twig
+++ b/app/index.twig
@@ -62,7 +62,7 @@
 					</div>
 				</div>
 			</div>
-			<a href="#more-filter" data-toggle="collapse" class="link-arrow collapsed show-for-small">Show more</a>
+			<a href="javascript:void(0)" data-toggle="#more-filter" class="link-arrow show-for-small">Show more</a>
 			<div class="clearfix"></div>
 
 			<div id="more-filter">
@@ -134,7 +134,7 @@
 					</div>
 					<div class="col-6 col-md-2 ">
 						<div class="select-wrapper select-range">
-							Min <span>0</span>
+							<label>Min <span>0</span></label>
 							<ul>
 								<li class="active">0</li>
 								<li>$10000</li>
@@ -155,7 +155,7 @@
 
 					<div class="col-6 col-md-2 ">
 						<div class="select-wrapper select-range">
-							Max <span>0</span>
+							<label>Max <span>0</span></label>
 							<ul>
 								<li class="active">0</li>
 								<li>$10000</li>
