--- a/app/project.twig
+++ b/app/project.twig
@@ -318,7 +318,7 @@
 	</div>
 </section>
 
-<section class="project" data-module="SlideProject">
+<section class="project slide-project" data-module="SlideProject">
 	<div class="container">
 
 		<h2 class="section-title">Similar Projects</h2>
