--- a/app/_templates/footer.twig
+++ b/app/_templates/footer.twig
@@ -5,22 +5,20 @@
 			<div class="row">
 				<div class="col-md-3 order-md-last">
 					<h3 class="block-title hide-for-small">Preferences</h3>
-					<div class="form-group">
+					<div class="form-group select-wrapper">
 						<select class="form-control" id="exampleFormControlSelect1">
 							<option disabled="disabled"  selected="selected" >Languague English</option>
-							<option>2</option>
-							<option>3</option>
-							<option>4</option>
-							<option>5</option>
+							<option>Viet Nam</option>
+							<option>US</option>
+							<option>China</option>
+							<option>Thai land</option>
 						</select>
 					</div>
-					<div class="form-group">
+					<div class="form-group select-wrapper">
 						<select class="form-control" id="exampleFormControlSelect2">
 							<option disabled="disabled"  selected="selected" >Currency US Dollars</option>
-							<option>2</option>
-							<option>3</option>
-							<option>4</option>
-							<option>5</option>
+							<option>VND</option>
+							<option>Euro</option>
 						</select>
 					</div>
 				</div>
