--- a/app/assets/css/pages/_global.scss
+++ b/app/assets/css/pages/_global.scss
@@ -461,15 +461,21 @@ section {
 
 	button {
 		background: none;
-		width: 40px;
-		height: 40px;
+		width: 30px;
+		height: 30px;
 		border:none;
 		border-radius: 50%;
 		color: $blue;
-		font-size: 16px;
+		font-size: 12px;
 		font-weight: bold;
 		transition:0.3s ease-out;
 		text-shadow:none;
+		@include screen(medium) {
+			width: 40px;
+			height: 40px;
+			font-size: 16px;	
+		}
+
 		&:hover {
 			background: #fff;
 			opacity:0.8;
@@ -490,12 +496,16 @@ section {
 	button {
 		position: relative;
 		background: none;
-		width: 38px;
-		height: 38px;
+		width: 30px;
+		height: 30px;
 		font-size: 0;
 		border:2px solid $blue;
 		border-radius: 50%;
 		color: $blue;
+		@include screen(medium) {
+			width: 40px;
+			height: 40px;
+		}
 		&:before {
 			@include absolute(top 50% left 50%);
 			transform: translate(-50%,-50%);
