--- a/app/assets/css/pages/_search.scss
+++ b/app/assets/css/pages/_search.scss
@@ -177,17 +177,6 @@
   }
 }
 
-.close-modal {
-  @include absolute(top -20px right 0px);
-  color: $gray-medium;
-  font-size: 32px;
-  z-index: 10;
-  &:hover {
-    color: #999;
-  }
-}
-
-
 #advance-filter {
   .fa-angle-down {
     transition:0.5s;
@@ -563,4 +552,38 @@
 
 .list-box {
   text-align: left;
+}
+
+@media only screen and (max-width: 600px) {
+  .jplist-panel {
+    display: block;
+  }
+}
+.jplist-last, .jplist-first {
+  display: none;
+}
+
+
+.map-control {
+  background-color: #fff;
+  border: 1px solid #ccc;
+  box-shadow: 0 2px 2px rgba(33, 33, 33, 0.4);
+  font-family: 'Roboto','sans-serif';
+  margin: 10px;
+  padding: 10px;
+  display: none;
+  li {
+    margin-bottom: 0;
+    & + li{
+      margin-top: 5px;
+    }
+  }
+
+}
+#map .map-control { display: block; }
+
+.selector-control {
+  font-size: 14px;
+  line-height: 30px;
+  vertical-align: baseline;
 }
